[collect] Added login as guest with meta data template

--- a/projects/collect/src/app/collect-app.component.html
+++ b/projects/collect/src/app/collect-app.component.html
@@ -1,5 +1,6 @@
-<div fxLayout="column" fxFill>
-    <cs-content>
-        CoVidSpeech Collect will be up and running soon!
+<div fxLayout="column" fxLayoutAlign="center center" fxFill>
+    <mat-progress-spinner *ngIf="!is_loaded" [diameter]="80" mode="indeterminate"></mat-progress-spinner>
+    <cs-content *ngIf="is_loaded" fxLayout="column" fxFill>
+        <router-outlet></router-outlet>
     </cs-content>
 </div>
