--- a/projects/collect/src/app/details/details.component.less
+++ b/projects/collect/src/app/details/details.component.less
@@ -4,15 +4,19 @@
   margin: 0!important;
 }
 
-.tab-gap {
-  margin: 10px;
+.form {
+  padding-top: 5px;
+}
+
+.tab-content-spacer {
+  margin: 15px;
 }
 
 .tab-sub-title {
   margin: 5px 0 5px;
 }
 
-.illness-box {
+.tab-check-box {
   padding: 10px 0 0 20px;
 }
 
