[collect] Updated login and details page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div fxLayout="column" fxFill>
+    <cs-navbar></cs-navbar>
     <cs-content>
         CoVidSpeech will be up and running soon!
     </cs-content>
+    <cs-footer></cs-footer>
 </div>
