--- a/projects/collect/src/app/collect-app.component.html
+++ b/projects/collect/src/app/collect-app.component.html
@@ -1,6 +1,10 @@
-<div fxLayout="column" fxLayoutAlign="center center" fxFill>
-    <mat-progress-spinner *ngIf="!is_loaded" [diameter]="80" mode="indeterminate"></mat-progress-spinner>
-    <cs-content *ngIf="is_loaded" fxLayout="column" fxFill>
+<div *ngIf="appLoader" fxLayout="column" fxFill>
+    <cs-navbar></cs-navbar>
+    <cs-content fxLayout="column" fxFlex>
         <router-outlet></router-outlet>
     </cs-content>
+    <cs-footer></cs-footer>
+</div>
+<div *ngIf="!appLoader" class="content-container" fxLayout="column" fxLayoutAlign="center center" fxFill>
+    <mat-progress-spinner [diameter]="80" mode="indeterminate"></mat-progress-spinner>
 </div>
