--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -1,9 +1,8 @@
 <div class="component-container">
-    <h4>We need some information to continue!</h4>
+    <h4 *ngIf="!finishedMetaData">We need some information to continue!</h4>
     <mat-tab-group [dynamicHeight]="true" [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndex = $event">
-        <mat-tab label="Disclaimer">
-            <p>Welcome to Covid-dhwani.
-            This project aims at data collection and diagnostic tools using speech and breathing sounds for healthy subjects and patients with respiratory diseases.
+        <mat-tab [disabled]="submitLoader" label="Disclaimer">
+            <p>Project Prana aims at data collection and diagnostic tools using speech and breathing sounds for healthy subjects and patients with respiratory diseases.
             This study builds on other previous studies which have reported a high level of sensitivity for identifying respiratory illness from the human voice.
             Any tools with statistical significance in disease detection will also be implemented as part of this app at a later date.
             </p>
@@ -12,119 +11,133 @@
             The data collected will be used for research purposes and will be shared with the research community for developing quick tools for Covid diagnostics.
             The participation in this study is purely voluntary and the details collected will not contain any personally identifiable information.
             </p>
-            By clicking start you will proceed to data and stimuli collection, accepting our terms and conditions.
+            <span *ngIf="disableMetaData && !finishedMetaData">By clicking start you will proceed to data and stimuli collection, accepting our
+            </span><span *ngIf="!disableMetaData || finishedMetaData">You have accepted our </span>
+            <a href="http://covid-speech.web.app/terms" target="_blank">terms and conditions</a>.
             <div class="tab-footer" fxLayout="row" fxLayoutAlign="end center">
-                <div class="button-dark" (click)="selectedIndex = selectedIndex + 1">START</div>
+                <div *ngIf="disableMetaData && !finishedMetaData" class="button button-dark" (click)="disableMetaData = false; selectedIndex = selectedIndex + 1">START</div>
+                <div *ngIf="!disableMetaData && !finishedMetaData" class="button button-dark" (click)="disableMetaData = false; selectedIndex = selectedIndex + 1">NEXT</div>
+                <div *ngIf="finishedMetaData" class="button button-dark" (click)="goToRecordPage()">CONTINUE</div>
             </div>
         </mat-tab>
-        <mat-tab label="Metadata" fxLayout="row wrap">
-            <div class="form" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
-                <mat-form-field fxFlex="30" fxFlex.xs="47">
+        <mat-tab *ngIf="!finishedMetaData" [disabled]="submitLoader || disableMetaData" label="Metadata" fxLayout="row wrap">
+            <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
+                <mat-form-field fxFlex="10" fxFlex.xs="27">
                     <mat-label>Age</mat-label>
-                    <input type="number" [formControl]="forms.personal.controls.age" matInput>
+                    <input type="number" [formControl]="formControls.age" matInput required>
+                    <mat-error *ngIf="formControls.age.hasError('required')">Required</mat-error>
+                    <mat-error *ngIf="formControls.age.hasError('min')">Doesn't look like valid ag</mat-error>
+                    <mat-error *ngIf="formControls.age.hasError('max')">Doesn't look like valid age</mat-error>
                 </mat-form-field>
-                <div fxFlex="5"></div>
-                <mat-form-field fxFlex="29" fxFlex.xs="47">
+                <div fxFlex="3" fxFlex.xs="5"></div>
+                <mat-form-field fxFlex="17" fxFlex.xs="67">
                     <mat-label>Gender</mat-label>
-                    <mat-select [(value)]="forms.personal.controls.gender">
-                        <mat-option *ngFor="let g of option_values.gender" [value]="g.id">
-                            {{g.value}}
-                        </mat-option>
+                    <mat-select [formControl]="formControls.gender" required>
+                        <mat-option *ngFor="let g of optionList.genderList" [value]="g.toLowerCase()">{{g}}</mat-option>
                     </mat-select>
+                    <mat-error *ngIf="formControls.gender.hasError('required')">Required</mat-error>
                 </mat-form-field>
             </div>
             <div class="tab-content-spacer" fxFlex></div>
-            <div class="form" fxLayout="row wrap" fxLayoutAlign="center start" fxFlex>
-                <h5 class="tab-sub-title" fxFlex="100">Are you proficient in English?</h5>
-                <mat-radio-group class="radio-group" [(ngModel)]="english_proficient" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
-                    <mat-radio-button class="tab-check-box" value="yes" fxFlex="13" fxFlex.xs="25">Yes</mat-radio-button>
-                    <mat-radio-button class="tab-check-box" value="no" fxFlex="13" fxFlex.xs="25">No</mat-radio-button>
+            <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
+                <h5 class="tab-sub-title" fxFlex.xs="100">Are you proficient in English?<span>*</span></h5>
+                <div fxFlex="5" fxHide.xs></div>
+                <mat-radio-group class="radio-group lang"
+                                 fxLayout="row wrap"
+                                 fxLayoutAlign="start center"
+                                 fxLayoutGap="10px" fxFlex
+                                 fxFlex.xs="100"
+                                 [formControl]="formControls.englishProficient">
+                    <mat-radio-button class="tab-check-box" value="y" fxFlex="13" fxFlex.xs="25">Yes</mat-radio-button>
+                    <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25">No</mat-radio-button>
                 </mat-radio-group>
             </div>
             <div class="tab-content-spacer" fxFlex></div>
-            <div class="form" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
+            <div class="tab-group" fxLayout="row wrap" fxLayoutAlign="start center" fxFlex>
                 <div fxFlex="5" fxHide.xs></div>
                 <h5 class="tab-sub-title" fxFlex="100">Location</h5>
                 <mat-form-field fxFlex="30" fxFlex.xs>
                     <mat-label>Country</mat-label>
-                    <input type="text" [formControl]="forms.current_address.controls.country" matInput>
+                    <mat-select [formControl]="formControls.country" (selectionChange)="getStates()" required>
+                        <mat-option *ngFor="let country of optionList.countryList" [value]="country">{{country}}</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="formControls.country.hasError('required')">Required</mat-error>
                 </mat-form-field>
                 <div fxFlex="5" fxHide.xs></div>
                 <mat-form-field fxFlex="29" fxFlex.xs>
                     <mat-label>State/Province</mat-label>
-                    <input type="text" [formControl]="forms.current_address.controls.state" matInput>
+                    <mat-select [formControl]="formControls.state" required>
+                        <mat-option *ngFor="let state of optionList.selectedStateList" [value]="state">{{state}}</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="formControls.state.hasError('required')">Required</mat-error>
                 </mat-form-field>
                 <div fxFlex="5" fxHide.xs></div>
                 <mat-form-field fxFlex="30" fxFlex.xs>
                     <mat-label>Locality/District</mat-label>
-                    <input type="text" [formControl]="forms.current_address.controls.locality" matInput>
+                    <input type="text" [formControl]="formControls.locality" matInput required>
+                    <mat-error *ngIf="formControls.locality.hasError('required')">Required</mat-error>
                 </mat-form-field>
+                <div fxLayout="row" fxLayoutAlign="end center" fxFlexFill>
+                    <span class="smaller-text">All fields marked (*) are mandatory</span>
+                </div>
             </div>
             <div class="tab-footer" fxLayout="row" fxLayoutAlign="end center">
                 <div class="button" (click)="selectedIndex = selectedIndex - 1">PREVIOUS</div>
                 <div fxFlex></div>
-                <div class="button-dark" (click)="selectedIndex = selectedIndex + 1">NEXT</div>
+                <div *ngIf="formGroups.metadata.valid" class="button button-dark" (click)="formGroups.metadata.valid && (selectedIndex = selectedIndex + 1)">NEXT</div>
             </div>
         </mat-tab>
-        <mat-tab label="Health Status">
+        <mat-tab *ngIf="!finishedMetaData"  [disabled]="!formGroups.metadata.valid" label="Health Status">
             <div class="form" fxLayout="row wrap" fxLayoutAlign="start center">
-                <mat-form-field fxFlex="75" fxFlex.xs>
-                    <mat-label>Current Status</mat-label>
-                    <mat-select [(value)]="forms.health.controls.status">
-                        <mat-option *ngFor="let hs of option_values.health_status" [value]="hs.id">
+                <h5 class="tab-sub-title" fxFlex="100">Current Status<span>*</span></h5>
+                <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
+                    <mat-radio-group class="radio-group" fxLayout="column" fxLayoutAlign="start start" [formControl]="formControls.currentStatus" required>
+                        <mat-radio-button class="tab-check-box"
+                                          [value]="hs.id"
+                                          *ngFor="let hs of optionList.currentStatusList"
+                                          fxFlex="100">
                             {{hs.value}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
+                        </mat-radio-button>
+                    </mat-radio-group>
+                </div>
                 <div class="tab-content-spacer" fxFlex="100"></div>
                 <h5 class="tab-sub-title" fxFlex="100">Respiratory Conditions</h5>
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
-                    <div class="tab-check-box" *ngFor="let cb of option_values.illness.resp" fxFlex="24" fxFlex.xs="100">
-                        <mat-checkbox >{{cb.name}}</mat-checkbox>
+                    <div class="tab-check-box" *ngFor="let cb of optionList.healthConditionList.resp" fxFlex="24" fxFlex.xs="100">
+                        <mat-checkbox [formControl]="formControls[cb.id]">{{cb.name}}</mat-checkbox>
                     </div>
                 </div>
                 <div class="tab-content-spacer" fxFlex="100"></div>
                 <h5 class="tab-sub-title" fxFlex="100">Heart Conditions</h5>
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
-                    <div class="tab-check-box" *ngFor="let cb of option_values.illness.heart" fxFlex="24" fxFlex.xs="100">
-                        <mat-checkbox >{{cb.name}}</mat-checkbox>
+                    <div class="tab-check-box" *ngFor="let cb of optionList.healthConditionList.heart" fxFlex="24" fxFlex.xs="100">
+                        <mat-checkbox [formControl]="formControls[cb.id]">{{cb.name}}</mat-checkbox>
                     </div>
                 </div>
                 <div class="tab-content-spacer" fxFlex="100"></div>
                 <h5 class="tab-sub-title" fxFlex="100">Other Conditions</h5>
                 <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
-                    <div class="tab-check-box" *ngFor="let cb of option_values.illness.others" fxFlex="24" fxFlex.xs="100">
-                        <mat-checkbox >{{cb.name}}</mat-checkbox>
+                    <div class="tab-check-box" *ngFor="let cb of optionList.healthConditionList.others" fxFlex="24" fxFlex.xs="100">
+                        <mat-checkbox [formControl]="formControls[cb.id]">{{cb.name}}</mat-checkbox>
                     </div>
                 </div>
-            </div>
-            <div class="tab-footer" fxLayout="row" fxLayoutAlign="end center">
-                <div class="button" (click)="selectedIndex = selectedIndex - 1">PREVIOUS</div>
-                <div fxFlex></div>
-                <div class="button-dark" (click)="selectedIndex = selectedIndex + 1">NEXT</div>
-            </div>
-        </mat-tab>
-        <mat-tab label="Travel History">
-            <div class="form" fxLayout="row wrap" fxLayoutAlign="start center">
-                <div fxLayout="row wrap" fxLayoutAlign="center start" fxFlex="50" fxFlex.xs="100" fxFill>
-                    <h5 class="tab-sub-title" fxFlex="100">Have you travelled outside the country recently?</h5>
-                    <mat-radio-group class="radio-group" [(ngModel)]="travelled" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
-                        <mat-radio-button class="tab-check-box" value="yes" fxFlex="25" fxFlex.xs="25">Yes</mat-radio-button>
-                        <mat-radio-button class="tab-check-box" value="no" fxFlex="25" fxFlex.xs="25">No</mat-radio-button>
-                    </mat-radio-group>
+                <div fxLayout="row" fxLayoutAlign="end center" fxFlexFill>
+                    <span class="smaller-text">All fields marked (*) are mandatory</span>
                 </div>
-                <div class="tab-content-spacer" fxFlex="0" fxFlex.xs="100"></div>
-                <mat-form-field *ngIf="travelled == 'yes'" fxFlex="30" fxFlex.xs="100">
-                    <mat-label>Date of return</mat-label>
-                    <input matInput [matDatepicker]="picker">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
             </div>
-            <div class="tab-footer" fxLayout="row" fxLayoutAlign="end center">
-                <div class="button" (click)="selectedIndex = selectedIndex - 1">PREVIOUS</div>
-                <div fxFlex></div>
-                <div class="button-dark" (click)="submit_meta_data()">SUBMIT</div>
+            <div class="tab-footer" fxLayout="column" fxLayoutAlign="start center">
+                <div *ngIf="!submitLoader" fxFlex="row" fxLayoutAlign="end center" fxFlexFill>
+                    <div class="button" (click)="selectedIndex = selectedIndex - 1">PREVIOUS</div>
+                    <div fxFlex></div>
+                    <div *ngIf="formGroups.metadata.valid && formGroups.healthStatus.valid"
+                         class="button button-dark"
+                         (click)="submitData()">
+                        SUBMIT
+                    </div>
+                </div>
+                <div *ngIf="submitLoader" fxFlex="row" fxLayoutAlign="center center" fxFlexFill>
+                    <mat-progress-spinner [diameter]="50" mode="indeterminate"></mat-progress-spinner>
+                </div>
             </div>
         </mat-tab>
     </mat-tab-group>
