--- a/projects/collect/src/app/details/details.component.less
+++ b/projects/collect/src/app/details/details.component.less
@@ -1,27 +1,16 @@
 @import '../../styles.less';
 
-.button, .button-dark {
-  margin: 0!important;
-}
-
-.form {
-  padding-top: 5px;
-}
-
-.tab-content-spacer {
-  margin: 15px;
-}
-
-.tab-sub-title {
-  margin: 5px 0 5px;
-}
-
-.tab-check-box {
-  padding: 10px 0 0 20px;
-}
-
+.button { margin: 0!important; }
+.form { padding-top: 5px; }
+.tab-content-spacer { margin: 15px; }
+.tab-check-box { padding: 10px 0 10px 20px; }
+.tab-sub-title { margin: 5px 0 5px; }
 .tab-footer {
   border-top: @border_line;
   padding-top: 10px;
   margin-top: 30px;
+}
+
+@media(min-width: 768px) {
+  .lang .tab-check-box { padding: 0; }
 }
