--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,13 @@
-<div class="content-container" fxLayout="column" fxLayoutAlign="center center">
-    <div class="login" fxLayout="column" fxLayoutAlign="start center">
-        <h3 class="heading">login<span class="color-dark"> | CoVidSpeech</span></h3>
-        <div fxLayout="column" fxLayoutAlign="center center" fxFlex>
-            <mat-progress-spinner *ngIf="login_loader" [diameter]="50" mode="indeterminate"></mat-progress-spinner>
-            <div *ngIf="!login_loader" class="button-dark" (click)="loginAnonymously()">Continue as Guest</div>
+<div class="component-container" fxLayout="row" fxLayoutAlign="center center" fxFlexFill>
+    <div class="login" fxLayout="column" fxLayoutAlign="start center" fxFlex="35">
+        <div class="heading" fxLayout="row" fxLayoutAlign="center center">
+            <h3 class="sub-heading">login</h3>
+            <h3 class="color-dark"> | prana</h3>
+        </div>
+        <div fxFlex></div>
+        <div class="button-container" fxLayout="row" fxLayoutAlign="center center" fxFlexFill>
+            <mat-progress-spinner *ngIf="loginLoader" [diameter]="50" mode="indeterminate"></mat-progress-spinner>
+            <div *ngIf="!loginLoader" class="button button-dark" (click)="guestLogin()" fxFlex>Continue as Guest</div>
         </div>
     </div>
 </div>
