--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -1,3 +1,21 @@
 <div class="component-container" fxLayout="column" fxLayoutAlign="start start" fxFill>
     <h4>Thank you for your participation!</h4>
+    <div class="content">
+        Thank you for being a part of this! Please share it among your friends and relatives.
+    </div>
+    <div class="thank-you-footer">
+        <div class="button" (click)="startSession()">START A NEW SESSION</div>
+    </div>
+    <h4>Developed by</h4>
+    <div class="logo" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
+        <div class="leap-logo">
+            <a href="http://leap.ee.iisc.ac.in/" target="_blank"><img src="../../assets/logo/leap.png" height="100px" width="auto" alt="leap"/></a>
+        </div>
+        <div class="iisc-logo">
+            <a href="https://www.iisc.ac.in/" target="_blank"><img src="../../assets/logo/iisc.jpg" height="100px" width="auto" alt="iisc"/></a>
+        </div>
+        <div class="cogknit-logo">
+            <a href="https://www.cogknit.com/" target="_blank"><img src="../../assets/logo/cogknit.png" height="50px" width="auto" alt="cogknit"/></a>
+        </div>
+    </div>
 </div>
