--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div fxLayout="column" fxFill>
     <cs-navbar></cs-navbar>
     <cs-content>
-        CoVidSpeech will be up and running soon!
+        Project Prana will be up and running soon!
     </cs-content>
-    <cs-footer></cs-footer>
 </div>
