--- a/src/styles.less
+++ b/src/styles.less
@@ -148,4 +148,5 @@ a:hover {
 .button.disabled { cursor: default; opacity: 0.6; }
 .small-text { font-size: @text_small_size; }
 .smaller-text { font-size: @text_smaller_size; }
+.full-width { width: 100%; }
 /* General classes ends*/
