[collect] Fixes and updates

--- a/projects/collect/src/app/thanks/thanks.component.less
+++ b/projects/collect/src/app/thanks/thanks.component.less
@@ -1,7 +1,17 @@
+.feedback {
+  width: 75%;
+}
+
 .thank-you-footer {
   margin: 15px 0;
 }
 
 .thank-you-footer .button {
   margin: 0;
+}
+
+@media(max-width: 768px) {
+  .feedback {
+    width: 100%;
+  }
 }
