--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -9,16 +9,16 @@
     <h4>Developed by</h4>
     <div class="logo" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
         <div class="leap-logo">
-            <a href="http://leap.ee.iisc.ac.in/" target="_blank"><img src="../../assets/logo/leap.png" height="100px" width="auto" alt="leap"/></a>
+            <a href="http://leap.ee.iisc.ac.in/" target="_blank"><img src="../../assets/logo/leap.png" height="90px" width="auto" alt="leap"/></a>
         </div>
         <div class="iisc-logo">
-            <a href="https://www.iisc.ac.in/" target="_blank"><img src="../../assets/logo/iisc.jpg" height="100px" width="auto" alt="iisc"/></a>
+            <a href="https://www.iisc.ac.in/" target="_blank"><img src="../../assets/logo/iisc.jpg" height="75px" width="auto" alt="iisc"/></a>
         </div>
         <div class="cogknit-logo">
-            <a href="https://www.cogknit.com/" target="_blank"><img src="../../assets/logo/cogknit.png" height="50px" width="auto" alt="cogknit"/></a>
+            <a href="https://www.cogknit.com/" target="_blank"><img src="../../assets/logo/cogknit.png" height="35px" width="auto" alt="cogknit"/></a>
         </div>
     </div>
-    <div class="feedback" fxLayout="column" fxLayoutAlign="start start" fxFill>
+    <div class="feedback" fxLayout="column" fxLayoutAlign="start start">
         <h4>Let us know your comments</h4>
         <mat-form-field *ngIf="!showFeedbackLoader && showFeedbackBox" class="full-width">
             <mat-label>Feedback</mat-label>
