--- a/projects/collect/src/app/record/record.component.less
+++ b/projects/collect/src/app/record/record.component.less
@@ -1,7 +1,30 @@
+@import '../../styles.less';
+
 .upload .content {
  margin-left: 15px;
 }
 
 .inst {
  margin-bottom: 10px;
+}
+
+.step-buttons {
+ margin-left: -5px;
+}
+
+.info-box {
+ margin: 10px 0;
+ padding: 10px 20px;
+ border: @border_line
+}
+
+.info-box .material-icons {
+ color: @color_dark;
+ font-size: @text_bigger_size;
+ margin-right: 10px;
+}
+
+@media(max-width: 768px) {
+ .info-box { margin: 0 0 10px; padding: 10px; }
+
 }
