--- a/projects/collect/src/app/collect-app.component.html
+++ b/projects/collect/src/app/collect-app.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="appLoader" fxLayout="column" fxFill>
+<div *ngIf="!appLoader" fxLayout="column" fxFill>
     <cs-navbar></cs-navbar>
     <cs-content fxLayout="column" fxFlex>
         <router-outlet></router-outlet>
     </cs-content>
 </div>
-<div *ngIf="!appLoader" class="content-container" fxLayout="column" fxLayoutAlign="center center" fxFill>
+<div *ngIf="appLoader" class="content-container" fxLayout="column" fxLayoutAlign="center center" fxFill>
     <mat-progress-spinner [diameter]="80" mode="indeterminate"></mat-progress-spinner>
 </div>
