--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -20,9 +20,9 @@
     </div>
     <div class="feedback" fxLayout="column" fxLayoutAlign="start start">
         <h4>Let us know your comments</h4>
-        <mat-form-field *ngIf="!showFeedbackLoader && showFeedbackBox" class="full-width">
+        <mat-form-field *ngIf="!showFeedbackLoader && showFeedbackBox" class="full-width" appearance="outline">
             <mat-label>Feedback</mat-label>
-            <textarea [formControl]="feedbackControl" matInput rows="10"></textarea>
+            <textarea [formControl]="feedbackControl" matInput rows="5"></textarea>
         </mat-form-field>
         <div *ngIf="!showFeedbackLoader && showFeedbackBox && feedbackControl.valid" class="thank-you-footer" fxLayout="row" fxLayoutAlign="end center">
             <div class="button" (click)="sendFeedback()">SEND FEEDBACK</div>
