[collect] Navigate fix

--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="feedback" fxLayout="column" fxLayoutAlign="start start">
-        <h4>Let us know your comments</h4>
+        <h4>Let us know your comments!</h4>
         <mat-form-field *ngIf="!showFeedbackLoader && showFeedbackBox" class="full-width" appearance="outline">
             <mat-label>Feedback</mat-label>
             <textarea [formControl]="feedbackControl" matInput rows="5"></textarea>
