[base, collect] Changed to Project Coswara

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,15 @@
 <div class="component-container">
     <h3 class="title">about</h3>
     <div class="content">
-        Project Prana aims at data collection and diagnostic tools using speech and breathing sounds for healthy subjects and patients with respiratory diseases.
+        <p>Project Coswara aims at designing point-of-care diagnosis for respiratory infections.
+            The focus is on making the diagnosis in seconds, without having to walk to the clinic, and inexpensive.
+            Towards this, we propose using human breath and voice.
+            Respiratory infection affects lungs, and this impacts air flow through the vocal tract while we speak.
+            The result is a temporary change in the voice quality.
+            We all have noticed this in our own voice or that of our dear ones, especially in the flu season.
+        </p>
+<!--        <h4 class="title">project implementation</h4>-->
+<!--        <h5 class="title">data collection</h5>-->
+        <p></p>
     </div>
 </div>
