--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="login" fxLayout="column" fxLayoutAlign="start center" fxFlex="35">
         <div class="heading" fxLayout="row" fxLayoutAlign="center center">
             <h3 class="sub-heading">login</h3>
-            <h3 class="color-dark"> | prana</h3>
+            <h3 class="color-dark"> | coswara</h3>
         </div>
         <div fxFlex></div>
         <div class="button-container" fxLayout="row" fxLayoutAlign="center center" fxFlexFill>
