--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -2,7 +2,7 @@
     <h4 *ngIf="!finishedMetaData">We need some information to continue!</h4>
     <mat-tab-group [dynamicHeight]="true" [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndex = $event">
         <mat-tab [disabled]="submitLoader" label="Disclaimer">
-            <p>Project Prana aims at data collection and diagnostic tools using speech and breathing sounds for healthy subjects and patients with respiratory diseases.
+            <p>Project Coswara aims at data collection and diagnostic tools using speech and breathing sounds for healthy subjects and patients with respiratory diseases.
             This study builds on other previous studies which have reported a high level of sensitivity for identifying respiratory illness from the human voice.
             Any tools with statistical significance in disease detection will also be implemented as part of this app at a later date.
             </p>
@@ -15,7 +15,7 @@
                 Please keep the microphone close to your mouth during the recording and perform the data recording in a quiet environment.</p>
             <span *ngIf="disableMetaData && !finishedMetaData">By clicking start you will proceed to data and stimuli collection, accepting our
             </span><span *ngIf="!disableMetaData || finishedMetaData">You have accepted our </span>
-            <a href="https://project-prana.web.app/terms" target="_blank">terms and conditions</a>.
+            <a href="https://project-coswara.web.app/terms" target="_blank">terms and conditions</a>.
             <p>For any questions, please contact <a href="mailto:sriramg@iisc.ac.in">sriramg@iisc.ac.in</a></p>
             <div class="tab-footer" fxLayout="row" fxLayoutAlign="end center">
                 <div *ngIf="disableMetaData && !finishedMetaData" class="button button-dark" (click)="disableMetaData = false; selectedIndex = selectedIndex + 1">START</div>
@@ -92,7 +92,7 @@
         <mat-tab *ngIf="!finishedMetaData"  [disabled]="!formGroups.metadata.valid" label="Health Status">
             <div class="form" fxLayout="row wrap" fxLayoutAlign="start center">
                 <h5 class="tab-sub-title" fxFlex="100">Current Status<span>*</span></h5>
-                <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
+                <div class="current-status" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
                     <mat-radio-group class="radio-group" fxLayout="column" fxLayoutAlign="start start" [formControl]="formControls.currentStatus" required>
                         <mat-radio-button class="tab-check-box"
                                           [value]="hs.id"
