--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,20 @@
 <div class="component-container">
-    <h2 class="title">project prana</h2>
-    <p>Project Prana aims at data collection and diagnostic tools using speech and breathing sounds for healthy subjects and patients with respiratory diseases.
+    <h2 class="title">project coswara</h2>
+    <p>Project Coswara aims at designing point-of-care diagnosis for respiratory infections.
+        The focus is on making the diagnosis in seconds, without having to walk to the clinic, and inexpensive.
+        Towards this, we propose using human breath and voice.
+        Respiratory infection affects lungs, and this impacts air flow through the vocal tract while we speak.
+        The result is a temporary change in the voice quality.
+        We all have noticed this in our own voice or that of our dear ones, especially in the flu season.</p>
+
+    <p>We are attempting diagnosis of COVID-19 through voice samples.
+        This is challenging and we are not sure if we will succeed.
+        However, we need to try out as there is some hope from scientific studies.
+        We need your support for this, and specifically, we need your 7 minutes.
     </p>
 
-    <p>Help us fight Covid '19 by donating data and sharing this with your friends and relatives.</p>
-    <p>Stay Home! Stay Safe!</p>
-
-    <div class="home-footer" fxLayout="row">
-        <a class="button" href="https://project-prana-collect.web.app" target="_blank">PROCEED TO COLLECTION SITE</a>
+    <div class="home-footer" fxLayout="row wrap" fxLayout.xs="column">
+<!--        <div class="button" [routerLink]="'/about'">ABOUT THE PROJECT</div>-->
+        <a class="button" href="https://project-coswara-collect.web.app" target="_blank">PROCEED TO COLLECTION SITE</a>
     </div>
 </div>
