--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,6 +15,6 @@
 
     <div class="home-footer" fxLayout="row wrap" fxLayout.xs="column">
 <!--        <div class="button" [routerLink]="'/about'">ABOUT THE PROJECT</div>-->
-        <a class="button" href="https://project-coswara-collect.web.app" target="_blank">PROCEED TO COLLECTION SITE</a>
+        <a class="button" href="https://record.coswara.iisc.ac.in" target="_blank">PROCEED TO COLLECTION SITE</a>
     </div>
 </div>
